removed extra import

--- a/connect4.ipynb
+++ b/connect4.ipynb
@@ -11,16 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "461dbc41",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Here "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "980d767b",
    "metadata": {},
@@ -43,9 +33,7 @@
     "from random import randrange\n",
     "from IPython.display import clear_output as clear\n",
     "from IPython.display import display as display\n",
-    "from time import sleep\n",
-    "import session_info\n",
-    "session_info.show()"
+    "from time import sleep"
    ]
   },
   {
@@ -558,14 +546,6 @@
    "source": [
     "main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "96ff6552",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
